--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BienTek</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="./style/estilos.css" />
   </head>
   <body>
@@ -24,6 +30,179 @@
           Otros productos
         </a>
       </nav>
+
+      <div
+        id="carouselExampleCaptions"
+        class="carousel slide"
+        data-bs-ride="carousel"
+      >
+        <div class="carousel-indicators">
+          <button
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide-to="0"
+            class="active"
+            aria-current="true"
+            aria-label="Slide 1"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide-to="1"
+            aria-label="Slide 2"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide-to="2"
+            aria-label="Slide 3"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide-to="3"
+            aria-label="Slide 4"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide-to="4"
+            aria-label="Slide 5"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide-to="5"
+            aria-label="Slide 6"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide-to="6"
+            aria-label="Slide 7"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide-to="7"
+            aria-label="Slide 8"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide-to="8"
+            aria-label="Slide 9"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide-to="9"
+            aria-label="Slide 10"
+          ></button>
+        </div>
+
+        <div class="carousel-inner">
+          <div class="carousel-item active text-center">
+            <img
+              src="./images/camarasony.png"
+              class="d-block mx-auto img-carousel"
+              alt="Cámara Sony"
+            />
+            <h5>CAMARA DIGITAL SONY DSC-W830</h5>
+          </div>
+          <div class="carousel-item text-center">
+            <img
+              src="./images/gopro.png"
+              class="d-block mx-auto img-carousel"
+              alt="GoPro"
+            />
+            <h5>Cámara GoPro Hero 13 Mini 4K/UHD</h5>
+          </div>
+          <div class="carousel-item text-center">
+            <img
+              src="./images/celularxiaomi.png"
+              class="d-block mx-auto img-carousel"
+              alt="Xiaomi Redmi"
+            />
+            <h5>Celular Xiaomi Redmi A3 3GB 64Gb (Negro)</h5>
+          </div>
+          <div class="carousel-item text-center">
+            <img
+              src="./images/celularsamsung.png"
+              class="d-block mx-auto img-carousel"
+              alt="Samsung A34"
+            />
+            <h5>SAMSUNG CELULAR LIBRE SM-A346MZS A34</h5>
+          </div>
+          <div class="carousel-item text-center">
+            <img
+              src="./images/hp.png"
+              class="d-block mx-auto img-carousel"
+              alt="Notebook HP"
+            />
+            <h5>NOTEBOOK HP 14″ MODELO 14-DQ2536LA</h5>
+          </div>
+          <div class="carousel-item text-center">
+            <img
+              src="./images/surface.png"
+              class="d-block mx-auto img-carousel"
+              alt="Surface Studio"
+            />
+            <h5>MICROSOFT SURFACE STUDIO 2+ 28″</h5>
+          </div>
+          <div class="carousel-item text-center">
+            <img
+              src="./images/tecladogamer.png"
+              class="d-block mx-auto img-carousel"
+              alt="Teclado Gamer"
+            />
+            <h5>TECLADO GAMER RETROILUMINADO NKB-5020</h5>
+          </div>
+          <div class="carousel-item text-center">
+            <img
+              src="./images/asuswebcam.png"
+              class="d-block mx-auto img-carousel"
+              alt="ASUS Webcam"
+            />
+            <h5>ASUS WEB CAM C3</h5>
+          </div>
+          <div class="carousel-item text-center">
+            <img
+              src="./images/smartv.png"
+              class="d-block mx-auto img-carousel"
+              alt="Samsung Smart TV"
+            />
+            <h5>Smart TV Samsung 43 UHD LED CU7000</h5>
+          </div>
+          <div class="carousel-item text-center">
+            <img
+              src="./images/philips.png"
+              class="d-block mx-auto img-carousel"
+              alt="TV Philips"
+            />
+            <h5>TV Philips HD 24" 24PHD5565/77</h5>
+          </div>
+        </div>
+
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carouselExampleCaptions"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Anterior</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#carouselExampleCaptions"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Siguiente</span>
+        </button>
+      </div>
 
       <ul>
         <li>
@@ -83,5 +262,10 @@
       Aviso: Todas las imágenes mostradas son sólo para fines ilustrativos y
       pueden no ser la representación exacta del producto.
     </footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
