--- a/pages/otrosproductos.html
+++ b/pages/otrosproductos.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BienTek</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="../style/estilos.css" />
   </head>
   <body>
@@ -40,14 +46,17 @@
         </li>
       </ul>
 
-      <button class="button">
-        <a href="../index.html">Volver al inicio</a>
-      </button>
+      <a href="../index.html" class="button">Volver al inicio</a>
     </main>
 
     <footer>
       Aviso: Todas las imágenes mostradas son sólo para fines ilustrativos y
       pueden no ser la representación exacta del producto.
     </footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
