--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="BienTek es una empresa apasionada por la venta de productos tecnológicos. Tenemos variedad de productos seleccionados por los que saben."
+    />
+    <meta
+      name="keywords"
+      content="BienTek, bientek, Bientek, productos tecnológicos, tecnología, computadoras, celulares, camaras digitales, televisores"
+    />
     <title>BienTek</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
