SEO en cada HTML

--- a/pages/otrosproductos.html
+++ b/pages/otrosproductos.html
@@ -3,6 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Otros produtos tecnológicos que te pueden interesar, también acá en BienTek"
+    />
+    <meta
+      name="keywords"
+      content="productos tecnológicos, teclado, web cam, stormer, Asus, BienTek, Bientek, bientek"
+    />
     <title>BienTek</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
