--- a/pages/televisores.html
+++ b/pages/televisores.html
@@ -3,6 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Lo mejor en televisores lo encontras acá, en BienTek"
+    />
+    <meta
+      name="keywords"
+      content="televisores, BienTek, Bientek, bientek, Samsung, smartv, smart TV, Philips"
+    />
     <title>BienTek</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
