--- a/pages/computadoras.html
+++ b/pages/computadoras.html
@@ -3,6 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Lo mejor en computadoras las encontras acá, en BienTek"
+    />
+    <meta
+      name="keywords"
+      content="Computadoras, Bientek, BienTek, bientek, HP, Surface"
+    />
     <title>BienTek</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
