--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
   </head>
   <body>
     <header>
-      <img id="logo" src="./images/logobientek.png" />
+      <img id="logo" src="./images/logobientek.png" alt="Logo de BienTek" />
     </header>
-    <main>
-      <h1 class="titulo">Nuestros Productos</h1>
+    <main class="container d-flex flex-column align-items-center text-center">
+      <h1 class="titulo animate-fade-in">Nuestros Productos</h1>
 
       <nav class="nav">
         <a href="./pages/computadoras.html" class="button"> Computadoras </a>
@@ -264,6 +264,10 @@
           <button class="button">Comprar</button>
         </li>
       </ul>
+
+      <h6>
+        <a href="./pages/contacto.html" class="button">Contactanos</a>
+      </h6>
     </main>
 
     <footer>
