--- a/pages/celulares.html
+++ b/pages/celulares.html
@@ -11,6 +11,7 @@
       name="keywords"
       content="Celulares, smartphone, telefonos, Bientek, BienTek, bientek, Xiomi, Samsung"
     />
+
     <title>BienTek</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
@@ -22,11 +23,11 @@
   </head>
   <body>
     <header>
-      <img id="logo" src="../images/logobientek.png" />
+      <img id="logo" src="../images/logobientek.png" alt="Logo de BienTek" />
     </header>
 
-    <main>
-      <h1 class="titulo">Nuestros Productos</h1>
+    <main class="container d-flex flex-column align-items-center text-center">
+      <h1 class="titulo animate-fade-in">Nuestros Productos</h1>
 
       <nav class="nav">
         <a href="../pages/computadoras.html" class="button"> Computadoras </a>
