--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -38,10 +38,10 @@
       <form action="/submit" method="post">
         <label for="nombre">Nombre:</label>
         <input type="text" name="nombre" id="nombre" />
-
-        <label for="e-mail">E-mail:</label>
-        <input type="e-mail" name="e-mail" id="e-mail" />
-
+        <div>
+          <label for="e-mail">E-mail:</label>
+          <input type="e-mail" name="e-mail" id="e-mail" />
+        </div>
         <input type="submit" value="Enviar" />
       </form>
 
