--- a/index.html
+++ b/index.html
@@ -31,12 +31,10 @@
         <a href="./pages/computadoras.html" class="button"> Computadoras </a>
         <a href="./pages/celulares.html" class="button"> Celulares </a>
         <a href="./pages/televisores.html" class="button"> Televisores </a>
-        <a href="./pages/camarasdigitales.html" class="button">
-          Cámaras Digitales
-        </a>
-        <a href="./pages/otrosproductos.html" class="button">
-          Otros productos
-        </a>
+        <a href="./pages/camarasdigitales.html" class="button"
+          >Cámaras Digitales</a
+        >
+        <a href="./pages/otrosproductos.html" class="button">Otros productos</a>
       </nav>
 
       <div
@@ -265,9 +263,7 @@
         </li>
       </ul>
 
-      <h6>
-        <a href="./pages/contacto.html" class="button">Contactanos</a>
-      </h6>
+      <a href="./pages/contacto.html" class="button">Contactanos</a>
     </main>
 
     <footer>
